light/dark mode button fixed position

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -10,20 +10,15 @@ body{
 }
 
  .logoCtn{
-     width:40%;
-     margin-right: 0%;
- }
-
- .logo{
-     margin-left:20%;
-     width: 10%;
+     margin-left: 1%;
+     width:39%;    
  }
 
  .navBar{
-     width: 50%;
+     width: 60%;
      display: flex;
      align-items: center;
-     margin-left: 10%;
+     
  }
 
 
@@ -34,9 +29,7 @@ body{
      align-items: center; 
      width: 60%;
      margin-right: 5%;
-     list-style: none;   
-
-    
+     list-style: none;       
  } 
  
  li{
@@ -60,8 +53,18 @@ a{
    
 }
 
-
-
 .navBarLink{
     color: $color1;
 }
+
+.setModeBox{
+    display: flex;
+    flex-direction: column;
+}
+
+
+@media screen and (max-width: 378px) {
+   .oval{
+       display: none;
+   }
+  } 
